# automationAssesment

./: .env.example  README.md  pyproject.toml
tjm_grounding/: __main__.py  actuation.py  annotate.py  config.py  grounder.py  narrowing.py  workflow.py
