[project]
name = "tjm-grounding"
version = "0.1.0"
description = "ScreenSpot-Pro-style VLM visual grounding + desktop automation for Windows"
requires-python = ">=3.11"
dependencies = [
    "mss>=9.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "requests>=2.31",
    "Pillow>=10.0",
    "httpx>=0.27",
    "openai>=1.30",          # OpenRouter is OpenAI-compatible
    "pyperclip>=1.8",        # clipboard access for paste-based typing
]

[project.scripts]
tjm-grounding = "tjm_grounding.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
